init common project